--- a/index.html
+++ b/index.html
@@ -1,192 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Searchmas</title>
-<link rel="icon" type="image/png" href="favicon.png">
-<link rel="manifest" href="manifest.json">
+  <meta charset="UTF-8">
+  <title>Searchmas</title>
 
-<style>
-html, body {margin:0; padding:0; font-family:Arial,sans-serif; min-height:100vh;}
-body{
-  margin:0;
-  display:flex; flex-direction:column; align-items:center; justify-content:flex-start;
-  background-size:cover;
-  background-position:center;
-  background-repeat:no-repeat;
-}
-#home, #results {width:100%; max-width:1400px; display:flex; flex-direction:column; align-items:center; padding:20px;}
-.logo{
-  font-size:clamp(36px,8vw,72px);
-  font-weight:bold;
-  margin-bottom:20px;
-  text-align:center;
-}
-.logo span:nth-child(1){color:#4285f4}
-.logo span:nth-child(2){color:#ff9800}
-.logo span:nth-child(3){color:#fbbc05}
-.logo span:nth-child(4){color:#4285f4}
-.logo span:nth-child(5){color:#34a853}
-.logo span:nth-child(6){color:#ff9800}
-.logo span:nth-child(7){color:#fbbc05}
-.logo span:nth-child(8){color:#4285f4}
-.logo span:nth-child(9){color:#34a853}
+  <!-- Favicon + Manifest -->
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="manifest" href="manifest.json">
 
-.search-container{width:90%; max-width:600px; margin-bottom:20px;}
-#results {display:none; width:100%; padding:10px;}
-.topbar{display:flex; gap:10px; align-items:center; margin-bottom:12px; flex-wrap:wrap;}
-.back{cursor:pointer; font-size:22px; flex-shrink:0;}
-.tabs{
-  display:flex; gap:12px; margin:15px 0; border-bottom:1px solid #ddd; flex-wrap:wrap;
-}
-.tab{
-  cursor:pointer; color:#5f6368; padding:8px 12px; border-radius:16px;
-}
-.tab.active{color:#1a73e8; border:2px solid #1a73e8; background:rgba(26,115,232,0.1);}
-#content{display:flex; flex-direction:column; gap:12px; width:100%;}
-.grid{display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:12px;}
-.grid img{width:100%; aspect-ratio:16/9; object-fit:cover; border-radius:8px;}
-.grid div.video{cursor:pointer; border:1px solid #ccc; padding:6px; border-radius:8px;}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#1a73e8">
 
-@media(max-width:768px){
-  .grid{grid-template-columns:1fr;}
-}
-</style>
+  <!-- Main PSE (All + Images) -->
+  <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      background: url('Santa.png') left center / 50% 100vh no-repeat fixed,
+                  url('Santa.png') right center / 50% 100vh no-repeat fixed;
+    }
+
+    @media(max-width:768px) {
+      body {
+        background: url('Santa.png') center center / cover no-repeat fixed;
+      }
+    }
+
+    #home {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .logo {
+      font-size: clamp(48px, 10vw, 80px);
+      font-weight: bold;
+      display: flex;
+    }
+
+    .logo span:nth-child(1){color:#4285f4}
+    .logo span:nth-child(2){color:#ff9800}
+    .logo span:nth-child(3){color:#fbbc05}
+    .logo span:nth-child(4){color:#4285f4}
+    .logo span:nth-child(5){color:#34a853}
+    .logo span:nth-child(6){color:#ff9800}
+    .logo span:nth-child(7){color:#fbbc05}
+    .logo span:nth-child(8){color:#4285f4}
+    .logo span:nth-child(9){color:#34a853}
+
+    .search-box {
+      max-width: 580px;
+      width: 90%;
+      padding: 0 16px;
+    }
+
+    input {
+      width: 100%;
+      padding: 14px 20px;
+      font-size: 18px;
+      border-radius: 24px;
+      border: 1px solid #dfe1e5;
+    }
+
+    #results {
+      display: none;
+      max-width: 1400px;
+      margin: auto;
+      padding: 15px;
+      min-height: 100vh;
+    }
+
+    .topbar {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+
+    .back {
+      cursor: pointer;
+      font-size: 22px;
+    }
+
+    .tabs {
+      display: flex;
+      gap: 18px;
+      margin: 15px 0;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .tab {
+      cursor: pointer;
+      color: #5f6368;
+      padding-bottom: 8px;
+    }
+
+    .tab.active {
+      color: #1a73e8;
+      border-bottom: 3px solid #1a73e8;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 12px;
+    }
+
+    .grid img {
+      width: 100%;
+      aspect-ratio: 16/9;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    /* Clean overrides */
+    .gsc-control-cse,
+    .gsc-control-cse * {
+      background: transparent !important;
+      border: none !important;
+      box-shadow: none !important;
+    }
+
+    .gsc-above-wrapper-area,
+    .gsc-tabsArea,
+    .gsc-adBlock,
+    .gcsc-find-more-on-google {
+      display: none !important;
+    }
+  </style>
 </head>
-<body id="body">
+<body>
 
 <div id="home">
   <div class="logo">
     <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
     <span>h</span><span>m</span><span>a</span><span>s</span>
   </div>
-  <div class="search-container">
-    <input type="text" placeholder="Search..." id="search-input" style="width:100%; padding:10px; font-size:16px;">
-  </div>
-  <button onclick="doSearch()" style="padding:10px 20px; font-size:16px;">Search</button>
+
+  <form class="search-box" onsubmit="startSearch(event)">
+    <input id="qHome" placeholder="Search the web">
+  </form>
 </div>
 
 <div id="results">
   <div class="topbar">
     <div class="back" onclick="goHome()">⬅</div>
-    <div class="search-container" style="flex:1;">
-      <input type="text" placeholder="Search..." id="search-input-results" style="width:100%; padding:10px; font-size:16px;">
-    </div>
-    <button onclick="doSearchResults()" style="padding:8px 16px;">Search</button>
+    <input id="qTop">
   </div>
 
   <div class="tabs">
-    <div class="tab active" data-id="all">All</div>
-    <div class="tab" data-id="images">Images</div>
-    <div class="tab" data-id="videos">Videos</div>
-    <div class="tab" data-id="news">News</div>
+    <div class="tab active" data-id="1">All</div>
+    <div class="tab" data-id="2">Images</div>
+    <div class="tab" data-id="3">Videos</div>
+    <div class="tab" data-id="4">News</div>
   </div>
 
-  <div id="content">
-    <div id="all-results"></div>
-    <div class="grid" id="image-results" style="display:none;"></div>
-    <div class="grid" id="video-results" style="display:none;"></div>
-  </div>
+  <div id="content"></div>
 </div>
 
 <script>
-// === WIRED KEYS ===
-const UNSPLASH_KEY = "1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YOUTUBE_KEY = "AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+const YT = "AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+let buttonId = 1;
 
-function updateBackground(){
-  if(window.innerWidth < 768){
-    document.getElementById('body').style.backgroundImage="url('Santa-mobile.png')";
-  }else{
-    document.getElementById('body').style.backgroundImage="url('Santa.png')";
-  }
-}
-window.addEventListener('resize', updateBackground);
-updateBackground();
+const homeEl = document.getElementById("home");
+const resEl = document.getElementById("results");
+const qHome = document.getElementById("qHome");
+const qTop = document.getElementById("qTop");
+const content = document.getElementById("content");
 
-function goHome(){
-  document.getElementById("results").style.display="none";
-  document.getElementById("home").style.display="flex";
+function startSearch(e) {
+  e.preventDefault();
+  const q = qHome.value.trim();
+  if (!q) return;
+  history.pushState({}, "", "?q=" + encodeURIComponent(q));
+  showResults(q);
 }
 
-// Tabs
-const tabs = document.querySelectorAll('.tab');
-tabs.forEach(tab=>{
-  tab.addEventListener('click',()=>{
-    tabs.forEach(t=>t.classList.remove('active'));
-    tab.classList.add('active');
-    switchTab(tab.dataset.id);
-  });
+function showResults(q) {
+  homeEl.style.display = "none";
+  resEl.style.display = "block";
+  qTop.value = q;
+  search();
+}
+
+function goHome() {
+  history.replaceState({}, "", location.pathname);
+  resEl.style.display = "none";
+  homeEl.style.display = "flex";
+}
+
+document.querySelectorAll(".tab").forEach(tab => {
+  tab.onclick = () => {
+    buttonId = +tab.dataset.id;
+    document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
+    tab.classList.add("active");
+    search();
+  };
 });
 
-function switchTab(id){
-  document.getElementById('image-results').style.display='none';
-  document.getElementById('video-results').style.display='none';
-  document.getElementById('all-results').style.display='none';
-  if(id==='images') {
-    document.getElementById('image-results').style.display='grid';
-    fetchImages();
-  } else if(id==='videos'){
-    document.getElementById('video-results').style.display='grid';
-    fetchVideos();
-  } else {
-    document.getElementById('all-results').style.display='block';
-    fetchImages();
-    fetchVideos();
+function runPSE(q, cxId) {
+  content.innerHTML = `<div class="gcse-searchresults-only"></div>`;
+  const t = setInterval(() => {
+    if (window.google?.search?.cse?.element) {
+      clearInterval(t);
+      google.search.cse.element.go(q);
+    }
+  }, 100);
+}
+
+function search() {
+  const q = qTop.value.trim();
+  if (!q) return;
+
+  if (buttonId === 1) {
+    runPSE(q, "949e339dabb3b4e60"); // All
+    return;
+  }
+
+  if (buttonId === 2) {
+    runPSE(q, "949e339dabb3b4e60"); // Images
+    return;
+  }
+
+  if (buttonId === 3) {
+    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${encodeURIComponent(q)}&key=${YT}`)
+      .then(r => r.json())
+      .then(d => {
+        content.innerHTML = `<div class="grid">` +
+          d.items.map(v => `
+            <div>
+              <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
+                <img src="${v.snippet.thumbnails.high.url}">
+              </a>
+              <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
+                ${v.snippet.title}
+              </a>
+            </div>`).join("") + `</div>`;
+      });
+    return;
+  }
+
+  if (buttonId === 4) {
+    content.innerHTML = `<div id="news-results" class="gcse-searchresults-only"></div>`;
+    if (!window.newsPSELoaded) {
+      const s = document.createElement("script");
+      s.src = "https://cse.google.com/cse.js?cx=35777112bd50f4fe8"; // News cx
+      s.async = true;
+      document.head.appendChild(s);
+      window.newsPSELoaded = true;
+    }
+    const t = setInterval(() => {
+      if (window.google?.search?.cse?.element) {
+        clearInterval(t);
+        google.search.cse.element.go(q);
+      }
+    }, 100);
+    return;
   }
 }
-
-// Search triggers
-function doSearch(){
-  const q = document.getElementById('search-input').value;
-  document.getElementById('search-input-results').value = q;
-  document.getElementById('home').style.display='none';
-  document.getElementById('results').style.display='flex';
-  switchTab('all');
-}
-
-function doSearchResults(){
-  const q = document.getElementById('search-input-results').value;
-  document.getElementById('search-input').value = q;
-  switchTab('all');
-}
-
-// === Unsplash Fetch ===
-async function fetchImages(){
-  const query = document.getElementById('search-input-results').value || "nature";
-  const url = `https://api.unsplash.com/search/photos?query=${encodeURIComponent(query)}&client_id=${UNSPLASH_KEY}&per_page=12`;
-  try{
-    const res = await fetch(url);
-    const data = await res.json();
-    const grid = document.getElementById('image-results');
-    grid.innerHTML='';
-    data.results.forEach(img=>{
-      const el = document.createElement('img');
-      el.src = img.urls.small;
-      grid.appendChild(el);
-    });
-  }catch(e){console.error(e);}
-}
-
-// === YouTube V3 Fetch ===
-async function fetchVideos(){
-  const query = document.getElementById('search-input-results').value || "fun";
-  const url = `https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&q=${encodeURIComponent(query)}&key=${YOUTUBE_KEY}&maxResults=12`;
-  try{
-    const res = await fetch(url);
-    const data = await res.json();
-    const grid = document.getElementById('video-results');
-    grid.innerHTML='';
-    data.items.forEach(v=>{
-      const div = document.createElement('div');
-      div.className='video';
-      div.innerHTML = `<img src="${v.snippet.thumbnails.medium.url}" alt=""><br><strong>${v.snippet.title}</strong><br>${v.snippet.channelTitle}`;
-      div.onclick = ()=>window.open(`https://www.youtube.com/watch?v=${v.id.videoId}`,'_blank');
-      grid.appendChild(div);
-    });
-  }catch(e){console.error(e);}
-}
 </script>
+
 </body>
 </html>
