--- a/index.html
+++ b/index.html
@@ -1,142 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Searchmas</title>
+<meta charset="UTF-8">
+<title>Searchmas</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#1a73e8">
 
-  <!-- Favicon + Manifest -->
-  <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="manifest" href="manifest.json">
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="manifest" href="manifest.json">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#1a73e8">
+<!-- IE detection -->
+<script>
+  var ie = /*@cc_on!@*/false || !!document.documentMode;
+  if (ie) window.location.replace("ie.html");
+</script>
 
-  <!-- Main PSE (All + Images) -->
-  <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+<!-- Google PSE -->
+<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
-    }
+<style>
+html, body {margin:0; padding:0; height:100%; font-family:Arial,sans-serif;}
+body {
+  background:
+    url('Santa.png') left center / 50% 100vh no-repeat fixed,
+    url('Santa.png') right center / 50% 100vh no-repeat fixed;
+}
+@media (max-width: 768px){
+  body { background: url('Santa.png') center center / cover no-repeat; }
+}
 
-    body {
-      background: url('Santa.png') left center / 50% 100vh no-repeat fixed,
-                  url('Santa.png') right center / 50% 100vh no-repeat fixed;
-    }
+#home {min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; gap:20px;}
+.logo {
+  font-size:clamp(48px,10vw,80px);
+  font-weight:bold;
+  display:inline-flex;
+  gap:0;
+}
+.logo span:nth-child(1){color:#4285f4}
+.logo span:nth-child(2){color:#ff9800}
+.logo span:nth-child(3){color:#fbbc05}
+.logo span:nth-child(4){color:#4285f4}
+.logo span:nth-child(5){color:#34a853}
+.logo span:nth-child(6){color:#ff9800}
+.logo span:nth-child(7){color:#fbbc05}
+.logo span:nth-child(8){color:#4285f4}
+.logo span:nth-child(9){color:#34a853}
 
-    @media(max-width:768px) {
-      body {
-        background: url('Santa.png') center center / cover no-repeat fixed;
-      }
-    }
+#searchBoxWrapper {width:90%; max-width:580px;}
+.gcse-searchbox-only input.gsc-input {width:100%; padding:14px 20px; font-size:18px; border-radius:24px; border:1px solid #dfe1e5;}
+.gcse-searchbox-only input.gsc-search-button {border-radius:24px; padding:14px 20px; background:#1a73e8; color:#fff; font-weight:bold; cursor:pointer;}
 
-    #home {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
+#results {display:none; max-width:1400px; margin:auto; padding:15px; min-height:100vh;}
+.topbar {display:flex; gap:12px; align-items:center; margin-bottom:12px; flex-wrap:wrap;}
+.back {cursor:pointer; font-size:22px;}
 
-    .logo {
-      font-size: clamp(48px, 10vw, 80px);
-      font-weight: bold;
-      display: flex;
-    }
+.tabs {display:flex; gap:18px; margin:15px 0; border-bottom:1px solid #ddd; flex-wrap:wrap;}
+.tab {cursor:pointer; color:#5f6368; padding-bottom:8px;}
+.tab.active {color:#1a73e8; border-bottom:3px solid #1a73e8;}
 
-    .logo span:nth-child(1){color:#4285f4}
-    .logo span:nth-child(2){color:#ff9800}
-    .logo span:nth-child(3){color:#fbbc05}
-    .logo span:nth-child(4){color:#4285f4}
-    .logo span:nth-child(5){color:#34a853}
-    .logo span:nth-child(6){color:#ff9800}
-    .logo span:nth-child(7){color:#fbbc05}
-    .logo span:nth-child(8){color:#4285f4}
-    .logo span:nth-child(9){color:#34a853}
+.grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:12px;}
+.grid img {width:100%; aspect-ratio:16/9; object-fit:cover; border-radius:8px;}
 
-    .search-box {
-      max-width: 580px;
-      width: 90%;
-      padding: 0 16px;
-    }
+.news-col {display:flex; flex-direction:column; gap:16px; max-width:700px;}
+.news-card {display:flex; align-items:center; gap:14px; padding:16px; background:#fff; border-radius:14px; text-decoration:none; color:#000; box-shadow:0 2px 6px rgba(0,0,0,.08);}
 
-    input {
-      width: 100%;
-      padding: 14px 20px;
-      font-size: 18px;
-      border-radius: 24px;
-      border: 1px solid #dfe1e5;
-    }
+/* Dark Mode */
+body.dark {background-color:#121212; color:#e8eaed;}
+.dark #results, .dark #home {background-color:#121212;}
+.dark input.gsc-input {background:#303134; color:#fff; border-color:#5f6368;}
+.dark .tab {color:#bdc1c6;}
+.dark .news-card {background:#202124; color:#e8eaed;}
+/* Keep logo colored even in dark mode */
+.dark .logo span {color:inherit !important;}
 
-    #results {
-      display: none;
-      max-width: 1400px;
-      margin: auto;
-      padding: 15px;
-      min-height: 100vh;
-    }
+#darkToggle {
+  position:fixed; bottom:20px; right:20px; z-index:1000;
+  padding:10px 15px; border-radius:20px; cursor:pointer;
+  background:#1a73e8; color:white; border:none; font-weight:bold;
+}
 
-    .topbar {
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      margin-bottom: 12px;
-    }
-
-    .back {
-      cursor: pointer;
-      font-size: 22px;
-    }
-
-    .tabs {
-      display: flex;
-      gap: 18px;
-      margin: 15px 0;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .tab {
-      cursor: pointer;
-      color: #5f6368;
-      padding-bottom: 8px;
-    }
-
-    .tab.active {
-      color: #1a73e8;
-      border-bottom: 3px solid #1a73e8;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 12px;
-    }
-
-    .grid img {
-      width: 100%;
-      aspect-ratio: 16/9;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-
-    /* Clean overrides */
-    .gsc-control-cse,
-    .gsc-control-cse * {
-      background: transparent !important;
-      border: none !important;
-      box-shadow: none !important;
-    }
-
-    .gsc-above-wrapper-area,
-    .gsc-tabsArea,
-    .gsc-adBlock,
-    .gcsc-find-more-on-google {
-      display: none !important;
-    }
-  </style>
+#wikiSummary img {object-fit:cover; border-radius:8px;}
+#wikiSummary div {line-height:1.4;}
+</style>
 </head>
 <body>
 
@@ -145,16 +90,15 @@
     <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
     <span>h</span><span>m</span><span>a</span><span>s</span>
   </div>
-
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
+  <div id="searchBoxWrapper">
+    <div class="gcse-searchbox-only"></div>
+  </div>
 </div>
 
 <div id="results">
   <div class="topbar">
     <div class="back" onclick="goHome()">⬅</div>
-    <input id="qTop">
+    <div id="searchBoxWrapperResults" style="flex:1;"><div class="gcse-searchbox-only"></div></div>
   </div>
 
   <div class="tabs">
@@ -168,106 +112,96 @@
 </div>
 
 <script>
-const YT = "AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
-let buttonId = 1;
+const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
+const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
 
-const homeEl = document.getElementById("home");
-const resEl = document.getElementById("results");
-const qHome = document.getElementById("qHome");
-const qTop = document.getElementById("qTop");
-const content = document.getElementById("content");
+let buttonId = 1; 
+const homeEl=document.getElementById("home");
+const resEl=document.getElementById("results");
+const content=document.getElementById("content");
 
-function startSearch(e) {
-  e.preventDefault();
-  const q = qHome.value.trim();
-  if (!q) return;
-  history.pushState({}, "", "?q=" + encodeURIComponent(q));
-  showResults(q);
-}
-
-function showResults(q) {
-  homeEl.style.display = "none";
-  resEl.style.display = "block";
-  qTop.value = q;
-  search();
-}
-
-function goHome() {
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display = "none";
-  homeEl.style.display = "flex";
-}
-
-document.querySelectorAll(".tab").forEach(tab => {
-  tab.onclick = () => {
-    buttonId = +tab.dataset.id;
-    document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
-    tab.classList.add("active");
+document.querySelectorAll(".tab").forEach(tabEl=>{
+  tabEl.onclick=()=>{
+    buttonId = parseInt(tabEl.dataset.id);
+    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+    tabEl.classList.add("active");
     search();
   };
 });
 
-function runPSE(q, cxId) {
-  content.innerHTML = `<div class="gcse-searchresults-only"></div>`;
-  const t = setInterval(() => {
-    if (window.google?.search?.cse?.element) {
-      clearInterval(t);
-      google.search.cse.element.go(q);
-    }
-  }, 100);
+function goHome(){
+  resEl.style.display="none";
+  homeEl.style.display="flex";
 }
 
-function search() {
-  const q = qTop.value.trim();
-  if (!q) return;
+function search(){
+  const boxes = document.querySelectorAll('.gsc-input');
+  const q = boxes[0] ? boxes[0].value.trim() : '';
+  if(!q) return;
+  const enc=encodeURIComponent(q);
 
-  if (buttonId === 1) {
-    runPSE(q, "949e339dabb3b4e60"); // All
-    return;
-  }
+  content.innerHTML='';
 
-  if (buttonId === 2) {
-    runPSE(q, "949e339dabb3b4e60"); // Images
-    return;
-  }
+  if(buttonId===1){
+    // Wikipedia summary
+    const wikiContainer = document.createElement('div');
+    wikiContainer.id='wikiSummary';
+    wikiContainer.style.marginBottom='16px';
+    content.appendChild(wikiContainer);
 
-  if (buttonId === 3) {
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${encodeURIComponent(q)}&key=${YT}`)
-      .then(r => r.json())
-      .then(d => {
-        content.innerHTML = `<div class="grid">` +
-          d.items.map(v => `
+    fetch(`https://en.wikipedia.org/api/rest_v1/page/summary/${enc}`)
+      .then(r=>r.json())
+      .then(w=>{
+        if(!w.title || w.type==='disambiguation'){ wikiContainer.style.display='none'; return; }
+        wikiContainer.innerHTML=`
+          <div style="display:flex; gap:12px; align-items:flex-start; background:#f1f3f4; padding:16px; border-radius:12px;">
+            ${w.thumbnail ? `<img src="${w.thumbnail.source}" width="80">` : ''}
             <div>
-              <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
-                <img src="${v.snippet.thumbnails.high.url}">
-              </a>
-              <a target="_blank" href="https://youtube.com/watch?v=${v.id.videoId}">
-                ${v.snippet.title}
-              </a>
-            </div>`).join("") + `</div>`;
-      });
-    return;
+              <div style="font-size:18px; font-weight:bold;">${w.title}</div>
+              <div style="font-size:14px; color:#5f6368;">${w.extract}</div>
+              <a href="https://en.wikipedia.org/wiki/${encodeURIComponent(w.title)}" target="_blank" style="font-size:13px; color:#1a73e8;">Read more</a>
+            </div>
+          </div>`;
+      })
+      .catch(()=>{ wikiContainer.style.display='none'; });
   }
 
-  if (buttonId === 4) {
-    content.innerHTML = `<div id="news-results" class="gcse-searchresults-only"></div>`;
-    if (!window.newsPSELoaded) {
-      const s = document.createElement("script");
-      s.src = "https://cse.google.com/cse.js?cx=35777112bd50f4fe8"; // News cx
-      s.async = true;
-      document.head.appendChild(s);
-      window.newsPSELoaded = true;
-    }
-    const t = setInterval(() => {
-      if (window.google?.search?.cse?.element) {
-        clearInterval(t);
-        google.search.cse.element.go(q);
-      }
-    }, 100);
-    return;
+  if(buttonId===2){
+    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`, {
+      headers:{Authorization:"Client-ID "+UNSPLASH}
+    }).then(r=>r.json()).then(d=>{
+      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join('')}</div>`;
+    });
+  }
+
+  if(buttonId===3){
+    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
+      .then(r=>r.json())
+      .then(data=>{
+        if(!data.items || !data.items.length){ content.innerHTML='<p>No videos found.</p>'; return; }
+        content.innerHTML=`<div class="grid">${data.items.map(video=>{
+          const t=video.snippet.title, thumb=video.snippet.thumbnails.high.url, url='https://www.youtube.com/watch?v='+video.id.videoId;
+          return `<div style="display:flex; flex-direction:column; gap:6px;">
+            <a href="${url}" target="_blank"><img src="${thumb}" style="border-radius:8px;"></a>
+            <a href="${url}" target="_blank" style="text-decoration:none;color:#1a73e8;font-weight:500;font-size:14px;line-height:1.2;">${t}</a>
+          </div>`;
+        }).join('')}</div>`;
+      }).catch(()=>{ content.innerHTML='<p>Error loading videos.</p>'; });
+  }
+
+  if(buttonId===4){
+    content.innerHTML=`<div class="news-col">
+      <a class="news-card" href="https://news.google.com/search?q=${enc}" target="_blank">
+        <img src="https://www.google.com/favicon.ico" width="32" height="32">
+        <div><div style="font-size:18px;font-weight:600;">Google News</div></div>
+      </a>
+      <a class="news-card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">
+        <img src="https://www.bing.com/favicon.ico" width="32" height="32">
+        <div><div style="font-size:18px;font-weight:600;">Bing News</div></div>
+      </a>
+    </div>`;
   }
 }
 </script>
-
 </body>
 </html>
